version/0.17/_sources/api/ansys/geometry/core/designer/design/Design.rst.txt






:class:`Design`
===============


.. py:class:: ansys.geometry.core.designer.design.Design(name: str, modeler: ansys.geometry.core.modeler.Modeler, read_existing_design: bool = False)

   Bases: :py:obj:`ansys.geometry.core.designer.component.Component`


   
   Provides for organizing geometry assemblies.

   This class synchronizes to a supporting Geometry service instance.

   :Parameters:

       **name** : :class:`python:str`
           User-defined label for the design.

       **grpc_client** : :obj:`GrpcClient`
           Active supporting Geometry service instance for design modeling.

       **read_existing_design** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Whether an existing design on the service should be read. This parameter is
           only valid when connecting to an existing service session. Otherwise, avoid
           using this optional parameter.









   .. warning::

       To ensure design objects are up to date, it is recommended to access design
       information (e.g. bodies, components, etc.) via the design instance properties
       and methods, rather than storing this information separately. For example, to get
       the bodies in a design, it is recommended to use ``design.bodies`` rather than
       storing the bodies in a separate variable (e.g. ``bodies = design.bodies``) and
       using that variable for future reference. This is because the design may be
       updated after the initial retrieval of the bodies, which would make the separate
       variable out of date.





   ..
       !! processed by numpydoc !!



.. py:currentmodule:: Design

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~close`
            - Close the design.
          * - :py:attr:`~add_material`
            - Add a material to the design.
          * - :py:attr:`~remove_material`
            - Remove a material from the design.
          * - :py:attr:`~save`
            - Save a design to disk on the active Geometry server instance.
          * - :py:attr:`~download`
            - Export and download the design from the server.
          * - :py:attr:`~export_to_scdocx`
            - Export the design to an scdocx file.
          * - :py:attr:`~export_to_disco`
            - Export the design to a DISCO file.
          * - :py:attr:`~export_to_stride`
            - Export the design to a stride file.
          * - :py:attr:`~export_to_parasolid_text`
            - Export the design to a Parasolid text file.
          * - :py:attr:`~export_to_parasolid_bin`
            - Export the design to a Parasolid binary file.
          * - :py:attr:`~export_to_fmd`
            - Export the design to an FMD file.
          * - :py:attr:`~export_to_step`
            - Export the design to a STEP file.
          * - :py:attr:`~export_to_iges`
            - Export the design to an IGES file.
          * - :py:attr:`~export_to_pmdb`
            - Export the design to a PMDB file.
          * - :py:attr:`~export_to_usd`
            - Export the design tessellation to a USD file.
          * - :py:attr:`~export_to_html`
            - Export the design directly to a self-contained HTML viewer.
          * - :py:attr:`~create_named_selection`
            - Create a named selection on the active Geometry server instance.
          * - :py:attr:`~delete_named_selection`
            - Delete a named selection on the active Geometry server instance.
          * - :py:attr:`~delete_component`
            - Delete a component (itself or its children).
          * - :py:attr:`~set_shared_topology`
            - Set the shared topology to apply to the component.
          * - :py:attr:`~add_beam_circular_profile`
            - Add a new beam circular profile under the design for creating beams.
          * - :py:attr:`~get_all_parameters`
            - Get parameters for the design.
          * - :py:attr:`~set_parameter`
            - Set or update a parameter of the design.
          * - :py:attr:`~add_midsurface_thickness`
            - Add a mid-surface thickness to a list of bodies.
          * - :py:attr:`~add_midsurface_offset`
            - Add a mid-surface offset type to a list of bodies.
          * - :py:attr:`~delete_beam_profile`
            - Remove a beam profile on the active geometry server instance.
          * - :py:attr:`~insert_file`
            - Insert a file into the design.
          * - :py:attr:`~get_raw_tessellation`
            - Tessellate the entire design and return the geometry as triangles.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~design_id`
            - The design's object unique id.
          * - :py:attr:`~materials`
            - List of materials available for the design.
          * - :py:attr:`~named_selections`
            - List of named selections available for the design.
          * - :py:attr:`~beam_profiles`
            - List of beam profile available for the design.
          * - :py:attr:`~parameters`
            - List of parameters available for the design.
          * - :py:attr:`~is_active`
            - Whether the design is currently active.
          * - :py:attr:`~is_closed`
            - Whether the design is closed (i.e. not active).




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__repr__`
            - Represent the ``Design`` as a string.




Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.designer.design import Design

Property detail
---------------

.. py:property:: design_id
   :type: str


   
   The design's object unique id.
















   ..
       !! processed by numpydoc !!

.. py:property:: materials
   :type: list[ansys.geometry.core.materials.material.Material]


   
   List of materials available for the design.
















   ..
       !! processed by numpydoc !!

.. py:property:: named_selections
   :type: list[ansys.geometry.core.designer.selection.NamedSelection]


   
   List of named selections available for the design.
















   ..
       !! processed by numpydoc !!

.. py:property:: beam_profiles
   :type: list[ansys.geometry.core.designer.beam.BeamProfile]


   
   List of beam profile available for the design.
















   ..
       !! processed by numpydoc !!

.. py:property:: parameters
   :type: list[ansys.geometry.core.parameters.parameter.Parameter]


   
   List of parameters available for the design.
















   ..
       !! processed by numpydoc !!

.. py:property:: is_active
   :type: bool


   
   Whether the design is currently active.
















   ..
       !! processed by numpydoc !!

.. py:property:: is_closed
   :type: bool


   
   Whether the design is closed (i.e. not active).
















   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: close() -> None

   
   Close the design.
















   ..
       !! processed by numpydoc !!

.. py:method:: add_material(material: ansys.geometry.core.materials.material.Material) -> None

   
   Add a material to the design.


   :Parameters:

       **material** : :obj:`Material`
           Material to add.














   ..
       !! processed by numpydoc !!

.. py:method:: remove_material(material: ansys.geometry.core.materials.material.Material | list[ansys.geometry.core.materials.material.Material]) -> None

   
   Remove a material from the design.


   :Parameters:

       **material** : :obj:`Material` | :class:`python:list`\[:obj:`Material`]
           Material or list of materials to remove.














   ..
       !! processed by numpydoc !!

.. py:method:: save(file_location: pathlib.Path | str, write_body_facets: bool = False) -> None

   
   Save a design to disk on the active Geometry server instance.


   :Parameters:

       **file_location** : :obj:`~pathlib.Path` | :class:`python:str`
           Location on disk to save the file to.

       **write_body_facets** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Option to write body facets into the saved file. 26R1 and later.














   ..
       !! processed by numpydoc !!

.. py:method:: download(file_location: pathlib.Path | str, format: DesignFileFormat = DesignFileFormat.SCDOCX, write_body_facets: bool = False, fmd_options: ansys.geometry.core.misc.options.FMDExportOptions | None = None, pmdb_options: ansys.geometry.core.misc.options.PMDBExportOptions | None = None) -> None

   
   Export and download the design from the server.


   :Parameters:

       **file_location** : :obj:`~pathlib.Path` | :class:`python:str`
           Location on disk to save the file to.

       **format** : :obj:`DesignFileFormat`, default: :obj:`DesignFileFormat.SCDOCX`
           Format for the file to save to.

       **write_body_facets** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Option to write body facets into the saved file. SCDOCX and DISCO only, 26R1 and later.

       **fmd_options** : :obj:`FMDExportOptions` | :data:`python:None`, default: :data:`python:None`
           Options for FMD export. Only applicable when format is FMD.

       **pmdb_options** : :obj:`PMDBExportOptions` | :data:`python:None`, default: :data:`python:None`
           Options for PMDB export. Only applicable when format is PMDB.









   .. warning::

       FMD and PMDB export options are only available in Ansys 27.1 and later
       products. If options are provided but the backend version does not support
       them, the options will be ignored.





   ..
       !! processed by numpydoc !!

.. py:method:: export_to_scdocx(location: pathlib.Path | str | None = None, write_body_facets: bool = False) -> pathlib.Path

   
   Export the design to an scdocx file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.

       **write_body_facets** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Option to write body facets into the saved file. SCDOCX and DISCO only, 26R1 and later.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_disco(location: pathlib.Path | str | None = None, write_body_facets: bool = False) -> pathlib.Path

   
   Export the design to a DISCO file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.

       **write_body_facets** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Option to write body facets into the saved file. SCDOCX and DISCO only, 26R1 and later.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_stride(location: pathlib.Path | str | None = None) -> pathlib.Path

   
   Export the design to a stride file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_parasolid_text(location: pathlib.Path | str | None = None) -> pathlib.Path

   
   Export the design to a Parasolid text file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_parasolid_bin(location: pathlib.Path | str | None = None) -> pathlib.Path

   
   Export the design to a Parasolid binary file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_fmd(location: pathlib.Path | str | None = None, options: ansys.geometry.core.misc.options.FMDExportOptions | None = None) -> pathlib.Path

   
   Export the design to an FMD file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.

       **options** : :obj:`FMDExportOptions`, :obj:`optional`
           Options for FMD export. If None, default options will be used.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.






   .. warning::

       FMD export options are only available in Ansys 27.1 and later products. If options are
       provided but the backend version does not support them, a warning will be issued and the
       options will be ignored.





   ..
       !! processed by numpydoc !!

.. py:method:: export_to_step(location: pathlib.Path | str | None = None) -> pathlib.Path

   
   Export the design to a STEP file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_iges(location: pathlib.Path | str = None) -> pathlib.Path

   
   Export the design to an IGES file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_pmdb(location: pathlib.Path | str | None = None, options: ansys.geometry.core.misc.options.PMDBExportOptions | None = None) -> pathlib.Path

   
   Export the design to a PMDB file.


   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str`, :obj:`optional`
           Location on disk to save the file to. If None, the file will be saved
           in the current working directory.



   :Returns:

       :obj:`~pathlib.Path`
           The path to the saved file.











   ..
       !! processed by numpydoc !!

.. py:method:: export_to_usd(location: pathlib.Path | str | None = None, tess_options: ansys.geometry.core.misc.options.TessellationOptions | None = None, file_format: str = 'usda') -> pathlib.Path

   
   Export the design tessellation to a USD file.

   Tessellates all bodies in the design and writes them to a Universal Scene
   Description (USD) file. The export preserves the full component/body hierarchy,
   mesh geometry, and per-body color as a ``UsdPreviewSurface`` material.

   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str` | :data:`python:None`, default: :data:`python:None`
           Output directory. If ``None``, the file is saved in the current working
           directory using the design name as the filename.

       **tess_options** : :obj:`TessellationOptions` | :data:`python:None`, default: :data:`python:None`
           Tessellation quality options. If ``None``, the server default is used.

       **file_format** : :class:`python:str`, default: ``"usda"``
           USD file format. One of:
           
           - ``"usda"`` — USD ASCII (human-readable)
           - ``"usdc"`` — USD binary crate (compact)
           - ``"usdz"`` — USD zip archive (self-contained)
           - ``"usd"`` — auto-detect (usd-core chooses binary or ASCII)



   :Returns:

       :obj:`~pathlib.Path`
           Path to the saved USD file.




   :Raises:

       :obj:`ImportError`
           If ``usd-core`` is not installed.
           Install with: ``pip install ansys-geometry-core[usd]``.

       :obj:`~ansys.geometry.core.errors.GeometryRuntimeError`
           If ``file_format`` is not one of the valid values.






   .. rubric:: Examples

   Export to binary USD in a specific directory:

   >>> path = design.export_to_usd("output/", file_format="usdc")

   ..
       !! processed by numpydoc !!

.. py:method:: export_to_html(location: pathlib.Path | str | None = None, tess_options: ansys.geometry.core.misc.options.TessellationOptions | None = None, show_mesh_lines: bool = True, line_color: str = '#ffffff', line_opacity: float = 0.9) -> pathlib.Path

   
   Export the design directly to a self-contained HTML viewer.

   Tessellates all bodies in the design, builds an in-memory USD stage, and
   converts it to a Three.js HTML viewer in a single step — no intermediate
   USD file is written to disk.

   :Parameters:

       **location** : :obj:`~pathlib.Path` | :class:`python:str` | :data:`python:None`, default: :data:`python:None`
           Output directory. If ``None``, the file is saved in the current working
           directory using the design name as the filename.

       **tess_options** : :obj:`TessellationOptions` | :data:`python:None`, default: :data:`python:None`
           Tessellation quality options. If ``None``, the server default is used.

       **show_mesh_lines** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:True`
           When ``True``, injects a wireframe overlay over each mesh in the viewer.

       **line_color** : :class:`python:str`, default: ``"#ffffff"``
           CSS hex color for the mesh-edge overlay.

       **line_opacity** : :class:`python:float`, default: ``0.9``
           Opacity of the mesh-edge overlay (``0.0``–``1.0``).



   :Returns:

       :obj:`~pathlib.Path`
           Path to the saved HTML file.




   :Raises:

       :obj:`ImportError`
           If ``usd-core`` or ``ansys-tools-visualization-interface[usd]`` is not installed.
           Install both with: ``pip install ansys-geometry-core[usd]``.






   .. rubric:: Examples

   Export to a specific directory without the wireframe overlay:

   >>> html_path = design.export_to_html("output/", show_mesh_lines=False)

   ..
       !! processed by numpydoc !!

.. py:method:: create_named_selection(name: str, bodies: list[ansys.geometry.core.designer.body.Body] | None = None, faces: list[ansys.geometry.core.designer.face.Face] | None = None, edges: list[ansys.geometry.core.designer.edge.Edge] | None = None, beams: list[ansys.geometry.core.designer.beam.Beam] | None = None, design_points: list[ansys.geometry.core.designer.designpoint.DesignPoint] | None = None, components: list[ansys.geometry.core.designer.component.Component] | None = None, vertices: list[ansys.geometry.core.designer.vertex.Vertex] | None = None, design_curves: list[ansys.geometry.core.designer.designcurve.DesignCurve] | None = None, datum_planes: list[ansys.geometry.core.designer.datumplane.DatumPlane] | None = None, coordinate_systems: list[ansys.geometry.core.designer.coordinate_system.CoordinateSystem] | None = None, datum_points: list[ansys.geometry.core.designer.datumpoint.DatumPoint] | None = None) -> ansys.geometry.core.designer.selection.NamedSelection

   
   Create a named selection on the active Geometry server instance.


   :Parameters:

       **name** : :class:`python:str`
           User-defined name for the named selection.

       **bodies** : :class:`python:list`\[:obj:`Body`], default: :data:`python:None`
           All bodies to include in the named selection.

       **faces** : :class:`python:list`\[:obj:`Face`], default: :data:`python:None`
           All faces to include in the named selection.

       **edges** : :class:`python:list`\[:obj:`Edge`], default: :data:`python:None`
           All edges to include in the named selection.

       **beams** : :class:`python:list`\[:obj:`Beam`], default: :data:`python:None`
           All beams to include in the named selection.

       **design_points** : :class:`python:list`\[:obj:`DesignPoint`], default: :data:`python:None`
           All design points to include in the named selection.

       **components** : :class:`python:list`\[:obj:`Component`], default: :data:`python:None`
           All components to include in the named selection.

       **vertices** : :class:`python:list`\[:obj:`Vertex`], default: :data:`python:None`
           All vertices to include in the named selection.

       **design_curves** : :class:`python:list`\[:obj:`DesignCurve`], default: :data:`python:None`
           All design curves to include in the named selection.

       **datum_planes** : :class:`python:list`\[:obj:`DatumPlane`], default: :data:`python:None`
           All datum planes to include in the named selection.

       **coordinate_systems** : :class:`python:list`\[:obj:`CoordinateSystem`], default: :data:`python:None`
           All coordinate systems to include in the named selection.

       **datum_points** : :class:`python:list`\[:obj:`DatumPoint`], default: :data:`python:None`
           All datum points to include in the named selection.



   :Returns:

       :obj:`NamedSelection`
           Newly created named selection that maintains references to all target entities.




   :Raises:

       :obj:`ValueError`
           If no entities are provided for the named selection. At least
           one of the optional parameters must be provided.







   ..
       !! processed by numpydoc !!

.. py:method:: delete_named_selection(named_selection: ansys.geometry.core.designer.selection.NamedSelection | str) -> None

   
   Delete a named selection on the active Geometry server instance.


   :Parameters:

       **named_selection** : :obj:`NamedSelection` | :class:`python:str`
           Name of the named selection or instance.














   ..
       !! processed by numpydoc !!

.. py:method:: delete_component(component: Union[ansys.geometry.core.designer.component.Component, str]) -> None

   
   Delete a component (itself or its children).


   :Parameters:

       **id** : :obj:`Union`\[:obj:`Component`, :class:`python:str`]
           Name of the component or instance to delete.







   :Raises:

       :obj:`ValueError`
           The design itself cannot be deleted.




   .. rubric:: Notes

   If the component is not this component (or its children), it
   is not deleted.



   ..
       !! processed by numpydoc !!

.. py:method:: set_shared_topology(share_type: ansys.geometry.core.designer.component.SharedTopologyType) -> None

   
   Set the shared topology to apply to the component.


   :Parameters:

       **share_type** : :obj:`SharedTopologyType`
           Shared topology type to assign.







   :Raises:

       :obj:`ValueError`
           Shared topology does not apply to a design.







   ..
       !! processed by numpydoc !!

.. py:method:: add_beam_circular_profile(name: str, radius: pint.Quantity | ansys.geometry.core.misc.measurements.Distance, center: numpy.ndarray | ansys.geometry.core.typing.RealSequence | ansys.geometry.core.math.point.Point3D = ZERO_POINT3D, direction_x: numpy.ndarray | ansys.geometry.core.typing.RealSequence | ansys.geometry.core.math.vector.UnitVector3D | ansys.geometry.core.math.vector.Vector3D = UNITVECTOR3D_X, direction_y: numpy.ndarray | ansys.geometry.core.typing.RealSequence | ansys.geometry.core.math.vector.UnitVector3D | ansys.geometry.core.math.vector.Vector3D = UNITVECTOR3D_Y) -> ansys.geometry.core.designer.beam.BeamCircularProfile

   
   Add a new beam circular profile under the design for creating beams.


   :Parameters:

       **name** : :class:`python:str`
           User-defined label for the new beam circular profile.

       **radius** : :obj:`~pint.Quantity` | :obj:`Distance`
           Radius of the beam circular profile.

       **center** : :obj:`~numpy.ndarray` | :obj:`RealSequence` | :obj:`Point3D`
           Center of the beam circular profile.

       **direction_x** : :obj:`~numpy.ndarray` | :obj:`RealSequence` | :obj:`UnitVector3D` | :obj:`Vector3D`
           X-plane direction.

       **direction_y** : :obj:`~numpy.ndarray` | :obj:`RealSequence` | :obj:`UnitVector3D` | :obj:`Vector3D`
           Y-plane direction.














   ..
       !! processed by numpydoc !!

.. py:method:: get_all_parameters() -> list[ansys.geometry.core.parameters.parameter.Parameter]

   
   Get parameters for the design.





   :Returns:

       :class:`python:list`\[:obj:`Parameter`]
           List of parameters for the design.






   .. warning::

       This method is only available starting on Ansys release 25R1.





   ..
       !! processed by numpydoc !!

.. py:method:: set_parameter(dimension: ansys.geometry.core.parameters.parameter.Parameter) -> ansys.geometry.core.parameters.parameter.ParameterUpdateStatus

   
   Set or update a parameter of the design.


   :Parameters:

       **dimension** : :obj:`Parameter`
           Parameter to set.



   :Returns:

       :obj:`ParameterUpdateStatus`
           Status of the update operation.






   .. warning::

       This method is only available starting on Ansys release 25R1.





   ..
       !! processed by numpydoc !!

.. py:method:: add_midsurface_thickness(thickness: ansys.geometry.core.misc.measurements.Distance | pint.Quantity | ansys.geometry.core.typing.Real, bodies: list[ansys.geometry.core.designer.body.Body]) -> None

   
   Add a mid-surface thickness to a list of bodies.


   :Parameters:

       **thickness** : :obj:`~pint.Quantity`
           Thickness to be assigned.

       **bodies** : :class:`python:list`\[:obj:`Body`]
           All bodies to include in the mid-surface thickness assignment.











   .. rubric:: Notes

   Only surface bodies will be eligible for mid-surface thickness assignment.



   ..
       !! processed by numpydoc !!

.. py:method:: add_midsurface_offset(offset_type: ansys.geometry.core.designer.body.MidSurfaceOffsetType, bodies: list[ansys.geometry.core.designer.body.Body]) -> None

   
   Add a mid-surface offset type to a list of bodies.


   :Parameters:

       **offset_type** : :obj:`MidSurfaceOffsetType`
           Surface offset to be assigned.

       **bodies** : :class:`python:list`\[:obj:`Body`]
           All bodies to include in the mid-surface offset assignment.











   .. rubric:: Notes

   Only surface bodies will be eligible for mid-surface offset assignment.



   ..
       !! processed by numpydoc !!

.. py:method:: delete_beam_profile(beam_profile: ansys.geometry.core.designer.beam.BeamProfile | str) -> None

   
   Remove a beam profile on the active geometry server instance.


   :Parameters:

       **beam_profile** : :obj:`BeamProfile` | :class:`python:str`
           A beam profile name or instance that should be deleted.














   ..
       !! processed by numpydoc !!

.. py:method:: insert_file(file_location: pathlib.Path | str, import_options: ansys.geometry.core.misc.options.ImportOptions = ImportOptions(), import_options_definitions: ansys.geometry.core.misc.options.ImportOptionsDefinitions = ImportOptionsDefinitions()) -> ansys.geometry.core.designer.component.Component

   
   Insert a file into the design.


   :Parameters:

       **file_location** : :obj:`~pathlib.Path` | :class:`python:str`
           Location on disk where the file is located.

       **import_options** : :obj:`ImportOptions`, :obj:`optional`
           The options to pass into upload file. If none are provided, default options are used.

       **import_options_definitions** : :obj:`ImportOptionsDefinitions`, :obj:`optional`
           Additional options to pass into insert file. If none are provided, default options
           are used.



   :Returns:

       :obj:`Component`
           The newly inserted component.






   .. warning::

       This method is only available starting on Ansys release 24R2.





   ..
       !! processed by numpydoc !!

.. py:method:: get_raw_tessellation(tess_options: ansys.geometry.core.misc.options.TessellationOptions | None = None, reset_cache: bool = False, include_faces: bool = True, include_edges: bool = False) -> dict

   
   Tessellate the entire design and return the geometry as triangles.


   :Parameters:

       **tess_options** : :obj:`TessellationOptions`, :obj:`optional`
           Options for the tessellation. If None, default options are used.

       **reset_cache** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Whether to reset the cache before performing the tessellation.

       **include_faces** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:True`
           Whether to include faces in the tessellation.

       **include_edges** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Whether to include edges in the tessellation.



   :Returns:

       :class:`python:dict`
           A dictionary with body IDs as keys and another dictionary as values.
           The inner dictionary has face and edge IDs as keys and the corresponding face/vertice
           arrays as values.











   ..
       !! processed by numpydoc !!

.. py:method:: __repr__() -> str

   
   Represent the ``Design`` as a string.
















   ..
       !! processed by numpydoc !!




